@@ -3,6 +3,11 @@
 This changelog contains major and/or breaking changes to Kakoune between
 released versions.
 
+== Development version
+
+* `+` only duplicates identical selections a single time to avoid surprising
+  and slow exponential growth in the number of selections.
+
 == Kakoune 2023.08.08
 
 * Fix compilation errors on FreeBSD and MacOS using clang
